--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ button {
     cursor: pointer;
 }
 
+.img {
+    display: block;
+}
+
 p,
 h1,
 h2,
@@ -30,12 +34,8 @@ h6 {
     margin-bottom: 0px;
 }
 
-.img {
-    display: block;
-}
-
 .conteiner {
-    width: 1440px;
+    width: 1158x;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto ;
@@ -44,6 +44,7 @@ h6 {
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-conteiner {
@@ -65,6 +66,7 @@ h6 {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 
 .header-logo-color {
@@ -78,6 +80,7 @@ h6 {
 }
 
 .header-contacts-list {
+    padding: 24px 0;
     font-style: normal;
     margin-left: auto;
 }
