--- a/css/styles.css
+++ b/css/styles.css
@@ -249,14 +249,13 @@ h6 {
     width: calc((100% - 3 * 24px) / 4);
 }
 
-.team-name {
+.container team-name {
     padding: 30px 0;
     text-align: center;
-    margin-bottom: 8px;
 }
 
-.team-subtitle { 
-    
+.team-subtitle {
+    margin-bottom: 8px;    
 }
 
 .team-item-text {
