--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ h6 {
     width: calc((100% - 3 * 24px) / 4);
 }
 
-.container-team-name {
+.team-name {
     padding: 30px 0;
     text-align: center;
 }
@@ -282,12 +282,18 @@ h6 {
 
 .portfolio-list {
     display: flex;
-    gap: 48px 24px;
-    width: calc((100% - 48px) / 3);
     flex-wrap: wrap;
+    gap: 48px 24px;
 }
 
 .portfolio-item {
+    width: calc((100% - 48px) / 3);
+}
+
+.app-text {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-image {
