--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ h6 {
     display: flex;
     margin-left: 76px;
     gap: 40px;
+    padding: 24px 0;
 }
 
 .header-contacts-list {
@@ -119,7 +120,7 @@ h6 {
 
 .hero {
     background-color: #2e2f42;
-    padding: 188px;
+    padding: 188px 0;
 }
 
 .hero-container {
@@ -159,8 +160,7 @@ h6 {
 }
 
 .features {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 120px 0;
 }
 
 .features-container {
@@ -222,7 +222,7 @@ h6 {
 
 .team {
     background: #f4f4fd;
-    padding: 120px;
+    padding: 120px 0;
 }
 
 .team-conteiner {
@@ -268,7 +268,7 @@ h6 {
 }
 
 .portfolio {
-    padding: 120px;
+    padding: 120px 0;
 }
 
 .portfolio-container {
@@ -316,7 +316,7 @@ h6 {
 .footer-container {
 }
 
-.logo {
+.logo-footer {
     display: inline-block;
     margin-bottom: 16px;
 }
