--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ h6 {
 
 
 .header-menu-link {
+    padding: 24px 0 24px;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
@@ -180,11 +181,13 @@ h6 {
     width: 1px;
     height: 1px;
     margin: -1px;
-    border: 0px;
-    padding: 0px;
+    border: 0;
+    padding: 0;
     white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
     overflow: hidden;
-}
+  }
 
 .features-subtitles {
     margin-bottom: 8px;
@@ -244,7 +247,7 @@ h6 {
     border-radius: 0 0 4px 4px;
     border: none;
     width: calc((100% - 3 * 24px) / 4);
-    padding: 32px 0;
+    padding: 32px 0 32px;
 }
 
 .team-name {
