--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,19 @@ h6 {
     margin-bottom: 0px;
 }
 
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+
 .header-container {
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto ;
+    display: flex; 
+    align-items: center;
 }
 
 .header {
@@ -46,10 +54,7 @@ h6 {
     border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
-    display: flex; 
-    align-items: center;
-}
+
 
 .header-navigation {
     display: flex;
