--- a/css/styles.css
+++ b/css/styles.css
@@ -258,8 +258,7 @@ h6 {
 }
 
 .team-subtitle {
-    /*margin-bottom: 8px;*/
-    padding-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .team-item-text {
@@ -306,8 +305,7 @@ h6 {
 }
 
 .portfolio-subtitle {
-    /*margin-bottom: 8px;*/
-    padding-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .portfolio-item-text {
@@ -323,7 +321,7 @@ h6 {
 
 .logo-footer {
     display: inline-block;
-    /*margin-bottom: 16px;*/
+    margin-bottom: 16px;
 }
 
 .footer-logo-color {
@@ -333,5 +331,5 @@ h6 {
 .footer-text {
     color: #f4f4fd;
     max-width: 264px;
-    margin-top: 16px;
+    /*margin-top: 16px;*/
 }
